
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   192: sluys, 07/07/2009
     - Updated match, overlap and related routines to work with two different waveforms
     - Removed FrVect.h, FrFilter.h and FrIO.h from include/  
       They're part of libframe, see fugu:/export/apps/libframe/include/ for a recent version
   
   191: sluys, 06/07/2009
     - Added Makefile_Fugu to allow static compilation on Fugu
   
   190: sluys, 24/06/2009
     - Free non-spinning LAL variables
     
   188: sluys, 18/06/2009
     - Added Doxygen comments in SPINspiral_routines.c

   187: sluys, 18/06/2009
     - Merged two non-spinning LAL-interface routines
   
   186: sluys, 18/06/2009
     - Started adding interface routines to generate non-spinning LAL waveforms
   
   185: sluys, 18/06/2009
     - Merged intScrOut and printMuch to parameter beVerbose
     - Main input file changed!
     - All warnings and errors are written to stderr now
     
   184: sluys, 18/06/2009
     - Renamed I/O files as well
     
   183: sluys, 17/06/2009
     - Renamed files from mcmc_*.c to SPINspiral_*.c and mcmc.h to SPINspiral.h (sorry!)
     - Chaged example Makefiles accordingly
     - Added doc/Doxyfile as an example Doxygen input file.  Run 'doxygen Doxyfile' in
       trunk/ and your output will be in doc/code_structure
     
   182: sluys, 16/06/2009
     - Removed mcmc_nolal.c
     - Merged include/mcmc_lal.h into include/mcmc.h
     - You'll probably need to change your Makefile, see doc/Makefiles/Makefile
     
   181: sluys, 16/06/2009
     - Removed last MCMC-parameter elements from struct parSet
     - Properly fixed intScrOut output
     
   180: sluys, 16/06/2009
     - Commenting and cleaning in mcmc_signal.c
     
   179: sluys, 16/06/2009
     - Treat MCMC parameters properly in localPar()
     
   178: sluys, 16/06/2009
     - Treat MCMC parameters properly in template routines